Implement naive persistence of users

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/overviewFragment"
-        android:name="com.example.githubusers.OverviewFragment"
+        android:name="com.example.githubusers.view.OverviewFragment"
         android:label="OverviewFragment" />
 </navigation>
