Implement details fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,5 +7,30 @@
     <fragment
         android:id="@+id/overviewFragment"
         android:name="com.example.githubusers.view.OverviewFragment"
-        android:label="OverviewFragment" />
+        android:label="OverviewFragment" >
+        <action
+            android:id="@+id/action_overviewFragment_to_userDetailsFragment"
+            app:destination="@id/userDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/userDetailsFragment"
+        android:name="com.example.githubusers.view.UserDetailsFragment"
+        android:label="UserDetailsFragment" >
+        <argument
+            android:name="login"
+            app:argType="string" />
+        <argument
+            android:name="id"
+            app:argType="long"
+            android:defaultValue="0L" />
+        <argument
+            android:name="avatarUrl"
+            app:argType="string" />
+        <argument
+            android:name="htmlUrl"
+            app:argType="string" />
+        <argument
+            android:name="score"
+            app:argType="float" />
+    </fragment>
 </navigation>
